--- a/modules/ROOT/pages/setup.adoc
+++ b/modules/ROOT/pages/setup.adoc
@@ -22,7 +22,7 @@ Anypoint Visualizer includes activity only from applications deployed to a suppo
 
 Anypoint Visualizer supports the following Mule runtimes running on *CloudHub*:
 
-* Mule Runtime, version 3.9.1
+* Mule Runtime, version 3.9.1+
 * Mule Runtime, version 3.9.1-AM
 * Mule Runtime, version 4.1.x
 * Mule Runtime, version 4.1.x-AM
