--- a/modules/ROOT/pages/view.adoc
+++ b/modules/ROOT/pages/view.adoc
@@ -59,9 +59,9 @@ When you select a node within the graph, the node and its dependency stack will 
 * *Metrics chart*: Shows the time-series chart of the selected metric in the *Metric* drop-down.
 * *Customization*: Provides information about the layer to which the node is assigned and the tags assigned to the node. You can change the layer and the tags from this section. See xref:layers.adoc[Use Layers in Anypoint Visualizer] and xref:use-tags-in-visualizer.adoc[Use Tags in Anypoint Visualizer].
 
-From the side panel, you can rename a node by clicking the *Rename Node* button.
+From the side panel, you can click *Rename Node* to rename a node.
 
-You can search for a node (service) in the *Search services* text field. Services containing your search in any part of their name will be highlighted, while others will fade.
+You can search for a node (service) in the *Search services* text field. Services containing your search in any part of their name will be highlighted, while others fade.
 
 == View Information About a Connection in Your Network
 
@@ -72,11 +72,11 @@ From the side panel, you can rename the connection by clicking the *Set Edge Nam
 [[customize-view]]
 == Customize Your View of Your Network
 
-Use the filtering feature in the side panel to customize your view and choose what appears in the canvas. You can filter by *environments*, *tags*, and *services*.
+Use the filtering feature in the side panel to customize your view and choose what appears in the canvas. You can filter by *environments*, *tags*, and *dependencies*.
 
 This feature enables you to hide the nodes that you do not want to see see in the graph. Filter selections persist after you close Anypoint Visualizer and reload the canvas at a later time.
 
-Note that filters have a cascading design, so all nodes that do not belong to the checked environments or tags are automatically hidden from the list of services. You can check the *Include related services* box to see services that are related to the nodes labeled with the selected tags. The list of services shown in the right-hand panel and the canvas will reflect this selection.
+Filters have a cascading design, so all nodes that do not belong to the checked environments or tags are automatically hidden from the list of dependencies. You can check the *Show dependents and dependencies* box to see dependencies that are related to the nodes labeled with the selected tags. The right-hand panel and the canvas are updated to display the current selection.
 
 
 == See Also
