--- a/modules/ROOT/pages/view.adoc
+++ b/modules/ROOT/pages/view.adoc
@@ -72,11 +72,11 @@ From the side panel, you can rename the connection by clicking the *Set Edge Nam
 [[customize-view]]
 == Customize Your View of Your Network
 
-Use the filtering feature in the side panel to customize your view and choose what appears in the canvas. You can filter by *environments*, *tags*, and *dependencies*.
+Use the filtering feature in the side panel to customize your view and choose what appears in the canvas. You can filter by *environments*, *tags*, and *services*.
 
-This feature enables you to hide the nodes that you do not want to see see in the graph. Filter selections persist after you close Anypoint Visualizer and reload the canvas at a later time.
+This feature enables you to hide the nodes that you do not want to see see in the graph. Filter selections persist until you change them.  When you close Anypoint Visualizer and reload the canvas at a later time, the filter selections you last made are displayed.
 
-Filters have a cascading design, so all nodes that do not belong to the checked environments or tags are automatically hidden from the list of dependencies. You can check the *Show dependents and dependencies* box to see dependencies that are related to the nodes labeled with the selected tags. The right-hand panel and the canvas are updated to display the current selection.
+Filters have a cascading design, so all nodes that do not belong to the checked environments or tags are automatically hidden from the list of services. You can toggle *Show dependents and dependencies* to see  the services as well as dependencies of the nodes and services with the selected tags. The panel on the right and the canvas are updated to display the current selection.
 
 
 == See Also
