--- a/modules/ROOT/pages/troubleshoot-visualizer.adoc
+++ b/modules/ROOT/pages/troubleshoot-visualizer.adoc
@@ -8,11 +8,11 @@ If you encounter an error while using Visualizer, you can try these solutions.
 |===
 |Error Message |Cause |Solution
 |`You don’t have access to any ${environment_type} environments. You can request access from your org admin.`
-| Either the organization or business group does not have this environment configured or you do not have the necessary permissions.
+| Either the organization or business group does not have the specified environment configured, or you do not have the necessary permissions.
 |Learn more about xref:access-management::roles.adoc[role permissions] or request the Runtime Manager *CloudHub Network Viewer* permission from your org administrator.
 |`There are no services to show in the selected environments. You may need to update your applications' runtime versions so they can appear in the Visualizer.`
 |Visualizer currently supports only applications deployed to CloudHub and standalone Mule runtime engines with specific runtimes.
-|If you know that you have applications deployed in this environment, but are not seeing them on the Visualizer canvas, you may need to update your applications to use the supported runtimes. View a list of xref:setup.adoc[supported runtimes].
+|If you know that you have applications deployed in a supported environment, but are not seeing them on the Visualizer canvas, you may need to update your applications to use the supported Mule runtime engines. View a list of xref:setup.adoc[supported Mule runtime engines].
 |Apps aren't appearing (and you aren't getting a specific error message).
 |Visualizer supports only specific runtimes.
 |If you are not seeing some of your applications on the Visualizer canvas or in the services list, first, check your filters. If the filters are not the issue, you may need to update your applications to use a different runtime if you want them to appear. View a list of xref:setup.adoc[supported runtimes].
@@ -27,8 +27,8 @@ If you encounter an error while using Visualizer, you can try these solutions.
 |While all users have free access to Anypoint Visualizer and Anypoint Monitoring, your account must first be enabled.
 |File a support ticket or contact your Customer Success representative and ask for your account to be enabled.
 |`Metrics aren't available for this app. You may need to update its runtime version.`
-|The application is not using a runtime that supports Anypoint Monitoring metrics.
-|For CloudHub applications, you must use a `-AM` runtime to support Anypoint Monitoring. View a list of xref:setup.adoc[supported runtimes].
+|The application is not using a Mule runtime engine that supports Anypoint Monitoring metrics.
+|For CloudHub applications, you must use an `-AM` Mule runtime engine to support Anypoint Monitoring. View a list of xref:setup.adoc[supported Mule runtime engines].
 |===
 
 == I seem to have permissions issues
@@ -40,6 +40,6 @@ If you encounter an error while using Visualizer, you can try these solutions.
 |You need to have the *Visualizer Editor* permission to edit in Visualizer.
 |Learn more about the different permissions in Visualizer and how to configure xref:access-management::roles.adoc#custom-roles[custom roles].
 |`Metrics are hidden for this app because you don’t have the “CloudHub viewer” role for its environment. Learn more.`
-|You have selected an application that belongs to an environment for which you are not a “CloudHub Viewer.” This node is only showing because it is a dependency of another node.
+|You have selected an application that belongs to an environment for which you are not a “CloudHub Viewer.” The node is showing only because it is a dependency of another node.
 |Learn more about xref:access-management::roles.adoc[configuring permissions].
 |===
