--- a/modules/ROOT/pages/use-tags-in-visualizer.adoc
+++ b/modules/ROOT/pages/use-tags-in-visualizer.adoc
@@ -9,22 +9,22 @@ You can add tags to an API, application, proxy, or other service. Similar to lay
 
 To automate adding tag(s) to a node, use the property `anypoint.platform.visualizer.tags=<name>, <name>`. You can configure this property in the application's properties file, or at deployment time through the Runtime Manager UI or API.
 
-When this property is used, the nodes will automatically show the assigned tag(s) in the side panel of Visualizer. The tag cannot be overridden in the UI and can only be modified in properties. You can still add other tags to this node using the UI, however. All tags are displayed as lowercase.
+When this property is used, the nodes automatically show the assigned tag(s) in the side panel of Visualizer. The tag cannot be overridden in the UI and can only be modified in properties. You can still add other tags to this node using the UI, however. All tags are displayed as lowercase.
 
 [NOTE]
 For applications deployed to standalone Mule runtime engines, tag names set using runtime properties can contain only alphanumeric characters. Unsupported characters are replaced with `_`  `.
 
-In the following example, the tag “project-b” was added through properties and therefore cannot be modified on the canvas.
+In the following example, the tag `project-b` was added through properties and therefore cannot be modified on the canvas.
 
 image::properties-tags.png[]
 
 == Setting the Tag Through the UI
 
-By default, when you first view a node using Anypoint Visualizer, it will not have any tags assigned. You can assign a tag to an existing node using the UI if it does not already have the same tag applied through properties.
+By default, when you first view a node using Anypoint Visualizer, it does not have any tags assigned. You can assign a tag to an existing node using the UI if it does not already have the same tag applied through properties.
 
 . Select the application node to tag. +
 You can hold the shift key to select multiple nodes to apply tags to all the selected nodes at once. +
-_Result:_ The Customization panel for the node appears in the right-hand panel as shown in the following image:
+_Result:_ The Customization panel for the node appears in the panel on the right as shown in the following image:
 +
 image::select-node.png[]
 . In the *Customization* panel, click *+ Add tag* as shown in the following image:
@@ -36,21 +36,21 @@ You can either: +
 * Enter a name for a new tag, and click *Create tag <your-tag>*, or
 * Enter a name for the new tag, and press enter. +
 [NOTE]
-You cannot apply the same tag multiple times to a node. All tags will be converted to lowercase and cannot have spaces.
+You cannot apply the same tag multiple times to a node. All tags are converted to lowercase and cannot have spaces.
 +
 image::create-tag.png[]
 +
-_Result:_ The tags that you added to a node will be listed in the *Customization* panel. This node will now be included in the list of services if you xref:view.adoc#customize-view[filter by this tag].
+_Result:_ The tags that you added to a node is listed in the *Customization* panel. This node is included in the list of services if you xref:view.adoc#customize-view[filter by this tag].
 
 == Delete a Tag
 
-You can delete tags from Anypoint Visualizer as required. Deleting a tag does not delete the associated nodes.
+You can delete tags from Anypoint Visualizer. Deleting a tag does not delete the associated nodes.
 
-To delete a tag assigned using the `anypoint.platform.visualizer.tags=<name>` property, you must return to the application’s properties file and delete the assignment `anypoint.platform.visualizer.tags=<name>`.
+To delete a tag assigned using the `anypoint.platform.visualizer.tags=<name>` property, return to the application’s properties file and delete the assignment `anypoint.platform.visualizer.tags=<name>`.
 
 To delete a tag that was configured in the UI:
 
-. Select the node with that tag.
+. Select a node with the tag you wish to delete.
 . Locate the tag in the *Customization* panel, and click the *X* on the tag to delete.
 
 == See Also
