--- a/modules/ROOT/pages/view.adoc
+++ b/modules/ROOT/pages/view.adoc
@@ -46,7 +46,7 @@ In the other drop-down, you can select the time window used to calculate the ave
 To avoid long numbers, Anypoint Visualizer uses unit prefixes to simplify your view. For example:
 
 |===
-| Avg throughput | 66.7m TPM | 66.7 million transactions per minute | 0.0667 TPM
+| Avg throughput | 66.7m TPM | 66.7 milli transactions per minute | 0.0667 TPM
 |===
 https://en.wikipedia.org/wiki/Metric_prefix[Here is a quick review of metric prefixes], but note that, in Anypoint Visualizer, *u* represents micro, rather than *μ*.
 
