--- a/modules/ROOT/pages/setup.adoc
+++ b/modules/ROOT/pages/setup.adoc
@@ -18,50 +18,64 @@ The *Visualizer Editor* permission can only be assigned within the master organi
 
 == Verify Supported CloudHub Runtimes
 
-Anypoint Visualizer includes activity only from applications deployed to a supported Mule runtime engine. When deploying a Mule application or API, you must ensure that you are using a supported Mule runtime engine as the deployment target.
+Anypoint Visualizer includes activity only from applications deployed to a supported version of Mule. When deploying a Mule application or API, you must ensure that you are using a supported version of Mule runtime engines (Mule) as the deployment target.
 
-Anypoint Visualizer supports the following Mule runtime engines running on *CloudHub*:
+Anypoint Visualizer supports the following Mule versions running on CloudHub:
 
-* Mule Runtime, version 3.9.1+
-* Mule Runtime, version 3.9.1-AM
-* Mule Runtime, version 4.1.x
-* Mule Runtime, version 4.1.x-AM
+* Mule version 3.9.1+
+* Mule version 3.9.1-AM
+* Mule version 4.1.x
+* Mule version 4.1.x-AM
 
 These versions are listed in *Runtime Manager > Runtime Version*. Expand the *Show old patch releases* section in the runtime versions drop-down.
 
 [NOTE]
 ====
-Anypoint Monitoring metrics appears only for applications running on a Mule `-AM` version. +
-You must also update the Mule runtime engine for applications using Mule runtime engines that were released before June 30th 2018 to ensure you have the proper Visualizer agent. You can do this update with zero downtime for CloudHub applications, APIs, and proxies.
+Anypoint Monitoring metrics appears only for applications running on these Mule versions:
++
+* Mule 4.x.-AM
+* Mule 4.1.x patch releases available after March 23, 2019. You must also enable the Monitoring agent after you upgrade.
+
+If your version of Mule was released before June 30th 2018, to ensure you have the correct Visualizer agent, upgrade your version of Mule to any of the supported versions listed. You can do this update with zero downtime for CloudHub applications, APIs, and proxies.
 ====
 
+== Enable the Monitoring Agent for Mule Version 4.1.x Upgrades After March 23, 2019
 
-== Verify Supported Standalone Mule Runtime Engines
+If you upgrade to Mule version 4.1.x released after March 23, 2019, enable the Monitoring agent to see metrics in Visualizer:
 
-Anypoint Visualizer supports the following Mule runtime engines for standalone Mule runtime engine deployments:
+. Verify that you are a user with *Anypiont Monitoring User* permission.
+. Sign in to Anypoint Platform and click *Runtime Manager*.
+. Click *Settings*.
+. Select *CloudHub*.
+. From the *Environment* drop-down list, choose an environment.
+. In *List of resources in Design*, search for an application whose metrics you wish to see.
+. Next to application, click *Enable* to enable monitoring for the application.
+
+== Verify Supported Standalone Mule Version
+
+Anypoint Visualizer supports the following Mule runtime engines for standalone Mule deployments:
 
 * Mule Runtime, version 3.8.5+
 * Mule Runtime, version 3.9.1+
 * Mule Runtime, version 4.1.1+
 
 
-== Standalone Mule Runtime Engine Setup
+== Standalone Mule Setup
 
-To support Visualizer for standalone Mule runtime engine deployments, you must xref:monitoring::am-installing.adoc[install the Anypoint Monitoring agent]. 
-
+To support Visualizer for standalone Mule deployments, xref:monitoring::am-installing.adoc[install the Anypoint Monitoring agent]. 
 
 == Verify Supported Connectors
 
 Anypoint Visualizer can monitor activity for outbound connections on specific connectors.
 
-For Mule runtime engine version 3.9.x, the following connectors are supported:
+For Mule version 3.9.x, the following connectors are supported:
 
 * Salesforce
 * HTTP/HTTPS
 * Database
 * All connectors based on the Connector DevKit
 
-For Mule runtime engine, version 4.1.x, the following connectors are supported:
+For Mule version 4.1.x, the following connectors are supported:
 
 * Salesforce
 * HTTP/HTTPS
@@ -71,7 +85,7 @@ For Mule runtime engine, version 4.1.x, the following connectors are supported:
 
 == Deploy an Application
 
-When you deploy an application you want to view in Anypoint Visualizer, ensure that you select a supported version of Mule runtime engine as the deployment target. See xref:runtime-manager::index.adoc[Runtime Manager] for more information.
+When you deploy an application you want to view in Anypoint Visualizer, ensure that you select a supported version of Mule as the deployment target. See xref:runtime-manager::index.adoc[Runtime Manager] for more information.
 
 After redeploying an application, all metadata collected by Anypoint Visualizer is removed for that application. The number of inbound connections for the application node is reset.
 
@@ -79,35 +93,46 @@ After redeploying an application, all metadata collected by Anypoint Visualizer 
 
 The agent that Anypoint Visualizer uses to collect metadata may have a performance impact. 
 
-*CloudHub*
+=== CloudHub
 
-To reduce performance impact for an application running in CloudHub, you can do one of the following:
+To reduce any monitoring performance impact for an application running in CloudHub you can disable data collection.
 
-* Deploy the application using a default Mule runtime engine.
+==== Disable Data Collection for Mule version 4 released before March 23, 2019
+
+To reduce the monitoring impact on performance for an application running in CloudHub:
+
+. Set the application property `anypoint.platform.config.visualizer.agent.enabled=false`.
+. Redeploy the application.
+
+==== Disable Data Collection for Mule version 4 released after March 23, 2019
+
+To reduce the monitoring impact on performance for an application running in CloudHub, disable the Monitoring agent:
+
+. Verify that you are a user with *Anypiont Monitoring User* permission.
+. Sign in to Anypoint Platform and click *Runtime Manager*.
+. Click *Settings*.
+. Select *CloudHub*.
+. From the *Environment* drop-down list, choose an environment.
+. In *List of resources in Design*, search for an application whose metrics you wish to see.
+. Next to application, click *Disable* to disable monitoring for the application.
+
+=== Standalone Mule
+
+To reduce performance impact for an application running in a standalone Mule, you can do one of the following:
+
+* Deploy the application using a default Mule without the Anypoint Monitoring agent.
 * Disable data collection for a specific application. To disable data collection for an application, set the following application property and redeploy the application:
 +
 ----
-anypoint.platform.config.visualizer.agent.enabled=true/false
-----
-
-
-*Standalone Mule Runtime Engines*
-
-To reduce performance impact for an application running in a standalone mule runtime, you can do one of the following:
-
-* Deploy the application using a default Mule runtime engine without the Anypoint Monitoring agent.
-* Disable data collection for a specific application. To disable data collection for an application, set the following application property and redeploy the application:
-+
-----
-anypoint.platform.config.analytics.agent.disabled=true/false 
+anypoint.platform.config.analytics.agent.disabled=true 
 ----
 +
 [NOTE]
-This will disable monitoring for that application as well.
+This setting disables monitoring for that application as well.
 +
 To disable the header injection for an application, set the following application property and redeploy the application:
 +
 ----
-anypoint.platform.config.analytics.agent.header_injection.disabled=true/false 
+anypoint.platform.config.analytics.agent.header_injection.disabled=true 
 ----
 
