--- a/modules/ROOT/pages/technical.adoc
+++ b/modules/ROOT/pages/technical.adoc
@@ -21,27 +21,38 @@ Anypoint Visualizer collects runtime information from running applications, APIs
 
 The agent that Anypoint Visualizer uses to collect metadata may have a performance impact. 
 
-*CloudHub*
+=== CloudHub
 
-To reduce performance impact for an application running in CloudHub, you can do one of the following:
+To reduce any monitoring performance impact for an application running in CloudHub you can disable data collection.
 
-* Deploy the application using a default Mule runtime engine.
-* Disable data collection for a specific application. To disable data collection for an application, set the following application property and redeploy the application:
-+
-----
-anypoint.platform.config.visualizer.agent.enabled=true/false
-----
+==== Disable Data Collection for Mule version 4 released before March 23, 2019
 
+To reduce the monitoring impact on performance for an application running in CloudHub:
+
+. Set the application property `anypoint.platform.config.visualizer.agent.enabled=false`.
+. Redeploy the application.
+
+==== Disable Data Collection for Mule version 4 released after March 23, 2019
+
+To reduce the monitoring impact on performance for an application running in CloudHub, disable the Monitoring agent:
+
+. Verify that you are a user with *Anypiont Monitoring User* permission.
+. Sign in to Anypoint Platform and click *Runtime Manager*.
+. Click *Settings*.
+. Select *CloudHub*.
+. From the *Environment* drop-down list, choose an environment.
+. In *List of resources in Design*, search for an application whose metrics you wish to see.
+. Next to application, click *Disable* to disable monitoring for the application.
 
 *Standalone Mule Runtime Engines*
 
-To reduce performance impact for an application running in a standalone mule runtime, you can do one of the following:
+To reduce performance impact for an application running in a standalone Mule, you can do one of the following:
 
-* Deploy the application using a default Mule runtime engine without the Anypoint Monitoring agent.
+* Deploy the application using a default Mule without the Anypoint Monitoring agent.
 * Disable data collection for a specific application. To disable data collection for an application, set the following application property and redeploy the application:
 +
 ----
-anypoint.platform.config.analytics.agent.disabled=true/false 
+anypoint.platform.config.analytics.agent.disabled=true 
 ----
 +
 [NOTE]
@@ -50,5 +61,5 @@ This will disable monitoring for that application as well.
 To disable the header injection for an application, set the following application property and redeploy the application:
 +
 ----
-anypoint.platform.config.analytics.agent.header_injection.disabled=true/false 
+anypoint.platform.config.analytics.agent.header_injection.disabled=true
 ----
