--- a/modules/ROOT/pages/technical.adoc
+++ b/modules/ROOT/pages/technical.adoc
@@ -21,42 +21,42 @@ Anypoint Visualizer collects runtime information from running applications, APIs
 
 The agent that Anypoint Visualizer uses to collect metadata may have a performance impact. 
 
-=== CloudHub
+=== Reduce Potential Performance Impact for CloudHub
 
-To reduce any monitoring performance impact for an application running in CloudHub you can disable data collection.
+To reduce any potential performance impact for an application running in CloudHub you can disable data collection.
 
 ==== Disable Data Collection for Mule version 4 released before March 23, 2019
 
-To reduce the monitoring impact on performance for an application running in CloudHub:
+To reduce any potential impact on performance for an application running in CloudHub:
 
 . Set the application property `anypoint.platform.config.visualizer.agent.enabled=false`.
 . Redeploy the application.
 
 ==== Disable Data Collection for Mule version 4 released after March 23, 2019
 
-To reduce the monitoring impact on performance for an application running in CloudHub, disable the Monitoring agent:
+To reduce any potential impact on performance for an application running in CloudHub, disable the Monitoring agent:
 
 . Verify that you are a user with *Anypiont Monitoring User* permission.
-. Sign in to Anypoint Platform and click *Runtime Manager*.
+. Sign in to Anypoint Platform and click *Anypoint Monitoring*.
 . Click *Settings*.
 . Select *CloudHub*.
 . From the *Environment* drop-down list, choose an environment.
-. In *List of resources in Design*, search for an application whose metrics you wish to see.
-. Next to application, click *Disable* to disable monitoring for the application.
+. In *List of resources in <Environment Name>*, search for an application whose metrics you wish to see.
+. Next to application, click *Disable & Apply* to disable monitoring for the application.
 
-*Standalone Mule Runtime Engines*
+=== Reduce Potential Perfromance Impact for Standalone Mule
 
-To reduce performance impact for an application running in a standalone Mule, you can do one of the following:
+Reducing potential performance impact for an application running in a standalone Mule must be done at the server level. You can do one of the following:
 
-* Deploy the application using a default Mule without the Anypoint Monitoring agent.
-* Disable data collection for a specific application. To disable data collection for an application, set the following application property and redeploy the application:
+* Deploy the application to a server without the Anypoint Monitoring agent installed.
+* Disable data collection for a specific server. To disable data collection for a server and all the applications deployed to that server, set the following property at the server level:
 +
 ----
 anypoint.platform.config.analytics.agent.disabled=true 
 ----
 +
 [NOTE]
-This will disable monitoring for that application as well.
+This will disable monitoring for applications on the server as well.
 +
 To disable the header injection for an application, set the following application property and redeploy the application:
 +
